<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <!-- Home Screen - Receipt List -->
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.ynab.receiptscanner.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
        
        <action
            android:id="@+id/action_home_to_review"
            app:destination="@id/reviewFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        
        <action
            android:id="@+id/action_home_to_camera"
            app:destination="@id/cameraFragment"
            app:launchSingleTop="true" />
    </fragment>

    <!-- Camera Screen - Capture Receipt -->
    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.ynab.receiptscanner.ui.camera.CameraFragment"
        android:label="@string/nav_scan"
        tools:layout="@layout/fragment_camera">
        
        <action
            android:id="@+id/action_camera_to_review"
            app:destination="@id/reviewFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/homeFragment" />
    </fragment>

    <!-- Review Screen - Edit and Submit Receipt -->
    <fragment
        android:id="@+id/reviewFragment"
        android:name="com.ynab.receiptscanner.ui.review.ReviewFragment"
        android:label="@string/review_title"
        tools:layout="@layout/fragment_review">
        
        <argument
            android:name="receiptId"
            app:argType="string" />
        
        <action
            android:id="@+id/action_review_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="false" />
    </fragment>

    <!-- Settings Screen -->
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.ynab.receiptscanner.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings">
        
        <action
            android:id="@+id/action_settings_to_about"
            app:destination="@id/aboutFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    
    <!-- About Screen -->
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.ynab.receiptscanner.ui.about.AboutFragment"
        android:label="@string/about_title"
        tools:layout="@layout/fragment_about" />

</navigation>
